...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.SearchNotificationActivity"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

    <EditText
        android:id="@+id/activity_search_search_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/query_text"
        android:hint="@string/search_query"
        android:backgroundTint="@color/colorPrimary"
        tools:targetApi="lollipop" />
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:theme="@style/checkBoxStyle"
                android:id="@+id/activity_search_chb_arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/chb_text"
                android:text="@string/arts"
                android:textColor="@color/colorBlack"/>

...
                android:textSize="@dimen/chb_text"
                android:text="@string/politics"
                android:textColor="@color/colorBlack"/>

            <CheckBox
                android:theme="@style/checkBoxStyle"
                android:id="@+id/activity_search_chb_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/chb_text"
                android:text="@string/sports"
                android:textColor="@color/colorBlack"/>

            <CheckBox
                android:theme="@style/checkBoxStyle"
                android:id="@+id/activity_search_chb_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel"
                android:textSize="@dimen/chb_text"
                android:textColor="@color/colorBlack"/>

...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:id="@+id/activity_search_button_layout">

        <Button
            android:id="@+id/activity_search_search_button"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:theme="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/colorWhiteText"
            android:background="@color/colorPrimary"/>
...
