...
        android:icon="@drawable/ic_notification_24"
        android:title="@string/notifications_results"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_icon_24"
        android:title="@string/search"
        app:showAsAction="always" />


    <item
...
